# FaceDetection

./: CMakeLists.txt  LICENSE  README.md
header/: hog.hpp  patch.hpp
src/: hog.cpp  main.cpp  patch.cpp
